--- a/Web/TimeManagement/Views/Report/CategoryWiseReport.cshtml
+++ b/Web/TimeManagement/Views/Report/CategoryWiseReport.cshtml
@@ -133,7 +133,7 @@
                             <input type="text" id="fromdate" class="form-control datePicker required" placeholder="From"
                                    name="fromDate" />
                             @*  @Html.TextBoxFor(m => m.fromdate, new { @class = "form-control datePicker required", placeholder = "From" })*@
-                            <div id="fdate" class="hidden">
+                            <div id="fdate" class="hidden requi">
                                 From Date Required
                             </div>
                         </div>
@@ -146,7 +146,7 @@
                             @* @Html.TextBoxFor(m => m.todate, new { @class = "form-control datePicker required", placeholder = "To" })*@
                             <input type="text" id="todate" class="form-control datePicker required" placeholder="To"
                                    name="toDate" />
-                            <div id="tdate" class="hidden">
+                            <div id="tdate" class="hidden requi">
                                 To Date Required
                             </div>
                         </div>
