--- a/Web/TimeManagement/Views/Report/ProjectWise.cshtml
+++ b/Web/TimeManagement/Views/Report/ProjectWise.cshtml
@@ -138,7 +138,7 @@
                         @*<input type="text" class="form-control datePicker required" id="fromdate" placeholder="From"
                             name="fromDate" />*@
                         @Html.TextBoxFor(m => m.fromdate, new { @class = "form-control datePicker required", placeholder = "From" })
-                        <div id="fdate" class="hidden">
+                        <div id="fdate" class="hidden requi">
                             From Date Required
                         </div>
                     </div>
@@ -151,7 +151,7 @@
                         @*<input type="text" class="form-control datePicker required" id="todate" placeholder="To"
                             name="toDate" />*@
                         @Html.TextBoxFor(m => m.todate, new { @class = "form-control datePicker required", placeholder = "To" })
-                        <div id="tdate" class="hidden">
+                        <div id="tdate" class="hidden requi">
                             To Date Required
                         </div>
                     </div>
