--- a/Web/TimeManagement/Views/Report/MTSInternalbilling.cshtml
+++ b/Web/TimeManagement/Views/Report/MTSInternalbilling.cshtml
@@ -301,7 +301,7 @@
                             <div class="col-lg-12 pad0">
                                 <input type="text" class="form-control datePicker required" id="fromdate" placeholder="From"
                                     name="fromDate" id="txtfromdate" />
-                                <div id="fdate" class="hidden">
+                                <div id="fdate" class="hidden requi">
                                     From Date Required</div>
                             </div>
                         </div>
@@ -312,7 +312,7 @@
                             <div class="col-lg-12 pad0">
                                 <input type="text" class="form-control datePicker required" id="todate" placeholder="To" name="toDate"
                                     id="txttodate" />
-                                <div id="tdate" class="hidden">
+                                <div id="tdate" class="hidden requi">
                                     To Date Required</div>
                             </div>
                         </div>
