--- a/Web/TimeManagement/Views/Report/MonthlyBilling.cshtml
+++ b/Web/TimeManagement/Views/Report/MonthlyBilling.cshtml
@@ -228,7 +228,7 @@
                             <div class="col-lg-12 pad0">
                                 <input type="text" class="form-control datePicker required" placeholder="From" name="fromDate"
                                     id="fromdate" />
-                                <div id="fdate" class="hidden">
+                                <div id="fdate" class="hidden requi">
                                     From Date Required</div>
                             </div>
                         </div>
@@ -239,7 +239,7 @@
                             <div class="col-lg-12 pad0">
                                 <input type="text" class="form-control datePicker required" placeholder="To" name="toDate"
                                     id="todate" />
-                                <div id="tdate" class="hidden">
+                                <div id="tdate" class="hidden requi">
                                     To Date Required</div>
                             </div>
                         </div>
