--- a/Web/TimeManagement/Views/Report/TimeSheetManagement.cshtml
+++ b/Web/TimeManagement/Views/Report/TimeSheetManagement.cshtml
@@ -164,7 +164,7 @@
                             <div class="col-lg-12 pad0">
                                 <input type="text" id="fromdate" class="form-control datePicker required" placeholder="From"
                                        name="fromDate" />
-                                <div id="fdate" class="hidden">
+                                <div id="fdate" class="hidden requi">
                                     From Date Required
                                 </div>
                             </div>
@@ -177,7 +177,7 @@
                             <div class="col-lg-12 pad0">
                                 <input type="text" id="todate" class="form-control datePicker required" placeholder="To"
                                        name="toDate" />
-                                <div id="tdate" class="hidden">
+                                <div id="tdate" class="hidden requi">
                                     To Date Required
                                 </div>
                             </div>
