--- a/Web/TimeManagement/Views/Master/_PVAddCustomer.cshtml
+++ b/Web/TimeManagement/Views/Master/_PVAddCustomer.cshtml
@@ -8,91 +8,104 @@
 
     });
 </script>
-@using (Html.BeginForm("/AddCustomer", "Master", FormMethod.Post, new { id = "CustomerAddForm" }))
+@using(Html.BeginForm("/AddCustomer", "Master", FormMethod.Post, new { id = "CustomerAddForm" }))
 {    
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">
-                    <span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                    <span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
+                </button>
                 <h4 class="modal-title">
-                    Add New Customer</h4>
+                    Add New Customer
+                </h4>
             </div>
+            @Html.HiddenFor(m => m.CustomerId)
             <div class="modal-body">
                 <div class="row">
                     <div class="col-lg-12 gap-bottom5">
                         <div class="col-lg-4 gap-top5 text-right">
-                            <b>Customer Name</b></div>
+                            <b>Customer Name</b>
+                        </div>
                         <div class="col-lg-7">
-                            @Html.TextBoxFor(m => m.CustomerName, new { @class = "required form-control form-control", maxlength = "50" })
+                            @Html.TextBoxFor(m => m.CustomerName, new { @class = "required form-control", maxlength = "50" })
                             <div>
-                                &nbsp</div>
+                                &nbsp
+                            </div>
                             <div>@Html.ValidationMessageFor(m => m.CustomerName)</div>
                         </div>
                     </div>
                     <div class="col-lg-12 gap-bottom5">
                         <div class="col-lg-4 gap-top5 text-right">
-                            <b>Customer Type</b></div>
-                             @{
-                                    List<SelectListItem> Customertype = new List<SelectListItem>();
+                            <b>Customer Type</b>
+                        </div>
+                        @{
+                            List<SelectListItem> Customertype = new List<SelectListItem>();
 
-                                    Customertype.Add(new SelectListItem { Value = "Banking", Text = "Banking" });
+                            Customertype.Add(new SelectListItem { Value = "Banking", Text = "Banking" });
 
-                                    Customertype.Add(new SelectListItem { Value = "Commercial", Text = "Commercial" });
+                            Customertype.Add(new SelectListItem { Value = "Commercial", Text = "Commercial" });
 
-                                    Customertype.Add(new SelectListItem { Value = "Education", Text = "Education" });
-                                    
-                                    Customertype.Add(new SelectListItem { Value = "Government", Text = "Government" });
+                            Customertype.Add(new SelectListItem { Value = "Education", Text = "Education" });
 
-                                    Customertype.Add(new SelectListItem { Value = "HealthCare", Text = "HealthCare" });
+                            Customertype.Add(new SelectListItem { Value = "Government", Text = "Government" });
 
-                                    Customertype.Add(new SelectListItem { Value = "Insurance", Text = "Insurance" });
+                            Customertype.Add(new SelectListItem { Value = "HealthCare", Text = "HealthCare" });
 
-                                    Customertype.Add(new SelectListItem { Value = "Leasing", Text = "Leasing" });
+                            Customertype.Add(new SelectListItem { Value = "Insurance", Text = "Insurance" });
 
-                                    Customertype.Add(new SelectListItem { Value = "Mortgage", Text = "Mortgage" });
+                            Customertype.Add(new SelectListItem { Value = "Leasing", Text = "Leasing" });
 
-                                    ViewBag.Customertype1 = Customertype;
+                            Customertype.Add(new SelectListItem { Value = "Mortgage", Text = "Mortgage" });
+
+                            ViewBag.Customertype1 = Customertype;
 
 
-                                    List<SelectListItem> Customertype2 = ViewBag.Customertype1;
-                                }
+                            List<SelectListItem> Customertype2 = ViewBag.Customertype1;
+                        }
                         <div class="col-lg-7">
-                         @*   @Html.TextBoxFor(m => m.CustomerType, new { @class = "required form-control" })*@
-                          @Html.DropDownListFor(m => m.CustomerType, Customertype2, "---Select Customer Type ---", new { @class = "required form-control" })
+                            @*   @Html.TextBoxFor(m => m.CustomerType, new { @class = "required form-control" })*@
+                            @Html.DropDownListFor(m => m.CustomerType, Customertype2, "---Select Customer Type ---", new { @class = "required form-control" })
 
                             <div>
-                                &nbsp</div>
+                                &nbsp
+                            </div>
                             <div>@Html.ValidationMessageFor(m => m.CustomerType)</div>
                         </div>
                     </div>
                     <div class="col-lg-12 gap-bottom5">
                         <div class="col-lg-4 gap-top5 text-right">
-                            <b>Customer Address1</b></div>
+                            <b>Customer Address1</b>
+                        </div>
                         <div class="col-lg-7">
                             @Html.TextBoxFor(m => m.CustomerAddress1, new { @class = "form-control", maxlength = "200" })
                             <div>
-                                &nbsp</div>
+                                &nbsp
+                            </div>
                             <div>@Html.ValidationMessageFor(m => m.CustomerAddress1)</div>
                         </div>
                     </div>
                     <div class="col-lg-12 gap-bottom5">
                         <div class="col-lg-4 gap-top5 text-right">
-                            <b>Customer Address2</b></div>
+                            <b>Customer Address2</b>
+                        </div>
                         <div class="col-lg-7">
                             @Html.TextBoxFor(m => m.CustomerAddress2, new { @class = "form-control", maxlength = "200" })
                             <div>
-                                &nbsp</div>
+                                &nbsp
+                            </div>
                             <div>@Html.ValidationMessageFor(m => m.CustomerAddress2)</div>
                         </div>
                     </div>
                     <div class="col-lg-12 gap-bottom5">
                         <div class="col-lg-4 gap-top5 text-right">
-                            <b>Description</b></div>
+                            <b>Description</b>
+                        </div>
                         <div class="col-lg-7">
                             @Html.TextBoxFor(m => m.Description, new { @class = "form-control", maxlength = "200" })
                             <div>
-                                &nbsp</div>
+                                &nbsp
+                            </div>
                             <div>@Html.ValidationMessageFor(m => m.Description)</div>
                         </div>
                     </div>
@@ -100,9 +113,11 @@
             </div>
             <div class="modal-footer">
                 <button type="submit" class="btn btn-info pull-right gap-right10">
-                    Add</button>
+                    Add
+                </button>
                 <button type="button" data-dismiss="modal" class="btn btn-info pull-right gap-right10">
-                    Close</button>
+                    Close
+                </button>
             </div>
         </div>
     </div>
