--- a/Web/TimeManagement/Views/Master/_PVAddLocations.cshtml
+++ b/Web/TimeManagement/Views/Master/_PVAddLocations.cshtml
@@ -1,4 +1,4 @@
-﻿#091117@model TimeManagement.Models.Location                
+﻿@model TimeManagement.Models.Location                
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
 
@@ -6,53 +6,58 @@
     $(document).ready(function () {
 
         $(".datePicker").datepicker();
-
+        
     });
 </script>
 
 @using (Html.BeginForm("/AddLocation", "Master", FormMethod.Post, new { id = "LocationAddForm" }))
 {    
    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">
-                    <span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                <h4 class="modal-title">
-            Add New Location
-        </h4>
-    </div>
-    <div class="modal-body">
-                <div class="row">
-                    <div class="col-lg-6">
-                       @* <div class="col-lg-12 gap-bottom5">
-                            <div class="col-lg-5 gap-top5 text-right">
-                    <b>Location ID </b></div>
-                <div class="col-lg-7">
-                    @Html.TextBoxFor(m => m.Id, new { @class = "required form-control" })
-                    <div>&nbsp</div>
-                    <div>@Html.ValidationMessageFor(m => m.Id)</div>
-                </div>
-            </div>*@
-               <div class="col-lg-12 gap-bottom5">               
-                 <div class="col-lg-5 gap-top5 text-right">
-                    <b>Location Name</b></div>
-                <div class="col-lg-7">
-                    @Html.TextBoxFor(m => m.Name, new { @class = "required form-control", maxlength = "100" })
-                    <div>&nbsp</div>
-                    <div>@Html.ValidationMessageFor(m => m.Name)</div>
-                </div>
-            </div>
-        </div>
-     </div>
-     </div>
-   
-    <div class="modal-footer">
-        <button type="submit"  class=" btn btn-info pull-right gap-right10">
-            Add</button>
-        <button type="button" data-dismiss="modal" class="btn btn-info pull-right gap-right10">
-            Close</button>
-            </div>
+       <div class="modal-content">
+           <div class="modal-header">
+               <button type="button" class="close" data-dismiss="modal">
+                   <span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
+               </button>
+               <h4 class="modal-title">
+                   Add New Location
+               </h4>
            </div>
+           @Html.HiddenFor(m => m.Id)
+           <div class="modal-body">
+               <div class="row">
+                   <div class="col-lg-12">
+                       @* <div class="col-lg-12 gap-bottom5">
+                                    <div class="col-lg-5 gap-top5 text-right">
+                            <b>Location ID </b></div>
+                        <div class="col-lg-7">
+                            @Html.TextBoxFor(m => m.Id, new { @class = "required form-control" })
+                            <div>&nbsp</div>
+                            <div>@Html.ValidationMessageFor(m => m.Id)</div>
+                        </div>
+                    </div>*@
+                       <div class="col-lg-12 gap-bottom5">
+                           <div class="col-lg-6 gap-top5 h5 text-right">
+                               <b>Location&nbspName</b>
+                           </div>
+                           <div class="col-lg-6 pull-right " >
+                               @Html.TextBoxFor(m => m.Name, new { @class = "required form-control", maxlength = "100" })
+                               <div>&nbsp</div>
+                               <div>@Html.ValidationMessageFor(m => m.Name)</div>
+                           </div>
+                       </div>
+                   </div>
+               </div>
+           </div>
+
+           <div class="modal-footer">
+               <button type="submit" class=" btn btn-info pull-right gap-right10">
+                   Add
+               </button>
+               <button type="button" data-dismiss="modal" class="btn btn-info pull-right gap-right10">
+                   Close
+               </button>
+           </div>
+       </div>
     </div>
   
 }
