--- a/Web/TimeManagement/Views/Master/_PVAddEmployee.cshtml
+++ b/Web/TimeManagement/Views/Master/_PVAddEmployee.cshtml
@@ -1,12 +1,48 @@
-﻿@model TimeManagement.Models.Employee       
+﻿@model TimeManagement.Models.Employee
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
 <script type="text/javascript">
     $(document).ready(function () {
 
         $(".datePicker").datepicker();
+        $('#email').change(function () {
+            var val = $('#email').val();
+            var RegEx =  /^(([^<>()[\]\\.,;:\s@@"]+(\.[^<>()[\]\\.,;:\s@@"]+)*)|(".+"))@@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
 
-         });
+             if (RegEx.test(val) && val.trim("") != '') {
+                $("#error-email").text("");
+                $('#addBtn').attr('disabled', false);
+            } else {
+                $("#error-email").text("Invalid Email.").css({ "color": "red" });
+                $('#addBtn').attr('disabled', true);
+            }
+        });
+
+
+    });
+
+    function validateName(textbox, error) {
+        var val = $(textbox).val();
+        var RegEx = /^[a-zA-Z ]+$/i;
+        if (RegEx.test(val) && val.trim() != '') {
+            $(error).text("");
+            $('#addBtn').attr('disabled', false);
+        } else {
+            $(error).text("Invalid name").css({ "color": "red" });
+            $('#addBtn').attr('disabled', true);
+        }
+    }
+    function validateDate(textbox, error) {
+        var val = $(textbox).val();
+        var RegEx = /^((0?[1-9]|1[012])[- /.](0?[1-9]|[12][0-9]|3[01])[- /.](19|20)?[0-9]{2})*$/;
+        if (RegEx.test(val) && val.trim() != '') {
+            $(error).text("");
+            $('#addBtn').attr('disabled', false);
+        } else {
+            $(error).text("Invalid Date! should be in format (mm/dd/yyyy)").css({ "color": "red" });
+            $('#addBtn').attr('disabled', true);
+        }
+    }
 
     function isNumber(evt) {
         evt = (evt) ? evt : window.event;
@@ -18,12 +54,13 @@
     }
 </script>
 @using (Html.BeginForm("/AddEmployee", "Master", FormMethod.Post, new { id = "EmployeeAddForm" }))
-{    
+{
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">
-                    <span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                    <span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
+                </button>
                 <h4 class="modal-title">
                     Add New Employee
                 </h4>
@@ -54,8 +91,8 @@
                                 <b>First Name </b>
                             </div>
                             <div class="col-lg-7">
-                                @Html.TextBoxFor(m => m.FirstName, new { @class = "required  form-control", maxlength = "50" })
-                                <div class="gap-top5">@Html.ValidationMessageFor(m => m.FirstName)</div>
+                                @Html.TextBoxFor(m => m.FirstName, new { @class = "required  form-control", maxlength = "50", id = "first", @onchange = "validateName('#first','#first-error')" })
+                                <div class="gap-top5" id="first-error">@Html.ValidationMessageFor(m => m.FirstName)</div>
                             </div>
                         </div>
                         <div class="col-lg-12 gap-bottom5">
@@ -63,8 +100,8 @@
                                 <b>Middle Name </b>
                             </div>
                             <div class="col-lg-7">
-                                @Html.TextBoxFor(m => m.MiddleName, new { @class = "form-control", maxlength = "50" })
-                                <div class="gap-top5">@Html.ValidationMessageFor(m => m.MiddleName)</div>
+                                @Html.TextBoxFor(m => m.MiddleName, new { @class = "form-control", maxlength = "50", id = "second", @onchange = "validateName('#second','#second-error')" })
+                                <div class="gap-top5" id="second-error">@Html.ValidationMessageFor(m => m.MiddleName)</div>
                             </div>
                         </div>
                         <div class="col-lg-12 gap-bottom5">
@@ -72,8 +109,8 @@
                                 <b>Last Name </b>
                             </div>
                             <div class="col-lg-7">
-                                @Html.TextBoxFor(m => m.LastName, new { @class = "required  form-control", maxlength = "50" })
-                                <div class="gap-top5">@Html.ValidationMessageFor(m => m.LastName)</div>
+                                @Html.TextBoxFor(m => m.LastName, new { @class = "required  form-control", maxlength = "50", id = "third", @onchange = "validateName('#third','#third-error')" })
+                                <div class="gap-top5" id="third-error">@Html.ValidationMessageFor(m => m.LastName)</div>
                             </div>
                         </div>
                         <div class="col-lg-12 gap-bottom5">
@@ -107,7 +144,8 @@
                     <div class="col-lg-6">
                         <div class="col-lg-12 gap-bottom5">
                             <div class="col-lg-4 gap-top5 text-right">
-                                <b>Cost($)</b></div>
+                                <b>Cost($)</b>
+                            </div>
                             <div class="col-lg-7">
                                 @Html.TextBoxFor(m => m.Cost, new { @class = "required  form-control", maxlength = "12" })
                                 <div class="gap-top5">@Html.ValidationMessageFor(m => m.Cost)</div>
@@ -118,8 +156,8 @@
                                 <b>Date Of Birth </b>
                             </div>
                             <div class="col-lg-7">
-                                @Html.TextBoxFor(m => m.DOB, new { @class = "required  form-control datePicker" })
-                                <div class="gap-top5">@Html.ValidationMessageFor(m => m.DOB)</div>
+                                @Html.TextBoxFor(m => m.DOB, new { @class = "required  form-control datePicker", id = "dob", @onchange = "validateDate('#dob','#dob-error')" })
+                                <div class="gap-top5" id="dob-error">@Html.ValidationMessageFor(m => m.DOB)</div>
                             </div>
                         </div>
                         <div class="col-lg-12 gap-bottom5">
@@ -127,8 +165,8 @@
                                 <b>Date Of Joining </b>
                             </div>
                             <div class="col-lg-7">
-                                @Html.TextBoxFor(m => m.DOJ, new { @class = "required  form-control datePicker" })
-                                <div class="gap-top5">@Html.ValidationMessageFor(m => m.DOJ)</div>
+                                @Html.TextBoxFor(m => m.DOJ, new { @class = "required  form-control datePicker", id = "doj", @onchange = "validateDate('#doj','#doj-error')" })
+                                <div class="gap-top5" id="doj-error">@Html.ValidationMessageFor(m => m.DOJ)</div>
                             </div>
                         </div>
                         <div class="col-lg-12 gap-bottom5">
@@ -136,8 +174,8 @@
                                 <b>Email </b>
                             </div>
                             <div class="col-lg-7">
-                                @Html.TextBoxFor(m => m.Email, new { @class = "required  form-control", maxlength = "50" })
-                                <div class="gap-top5">@Html.ValidationMessageFor(m => m.Email)</div>
+                                @Html.TextBoxFor(m => m.Email, new { @class = "required  form-control", maxlength = "50" ,id="email"})
+                                <div class="gap-top5" id="error-email">@Html.ValidationMessageFor(m => m.Email)</div>
                             </div>
                         </div>
                         <div class="col-lg-12 gap-bottom5">
@@ -154,23 +192,23 @@
                                 <b>Location </b>
                             </div>
                             @{
-    List<SelectListItem> Location = ViewBag.LocationList;
-                             }
+                                List<SelectListItem> Location = ViewBag.LocationList;
+                            }
                             <div class="col-lg-7">
                                 @Html.DropDownListFor(m => m.LocationId, Location, "---Select Location ---", new { @class = "required form-control" })
-                            <div class="gap-top5">@Html.ValidationMessageFor(m => m.LocationId)</div>
+                                <div class="gap-top5">@Html.ValidationMessageFor(m => m.LocationId)</div>
                             </div>
                         </div>
-                           <div class="col-lg-12 gap-bottom5">
+                        <div class="col-lg-12 gap-bottom5">
                             <div class="col-lg-4 gap-top5 text-right">
                                 <b>Role </b>
                             </div>
                             @{
-       List<SelectListItem> Role = ViewBag.RoleList;
+                                List<SelectListItem> Role = ViewBag.RoleList;
                             }
                             <div class="col-lg-7">
-                                   @Html.DropDownList("role", Role, "---Select Role ---", new { @class = "required form-control" })
-                                   @Html.HiddenFor(m => m.EmployeeRoles)
+                                @Html.DropDownList("role", Role, "---Select Role ---", new { @class = "required form-control" })
+                                @Html.HiddenFor(m => m.EmployeeRoles)
                                 <div class="gap-top5">@Html.ValidationMessageFor(m => m.LocationId)</div>
                             </div>
                         </div>
@@ -178,8 +216,8 @@
                             <div class="col-lg-4 gap-top5 text-right">
                                 <b>Email Reminder</b>
                             </div>
-                           <div class="col-lg-7">
-                                  @Html.CheckBox("EmailReminder", true)
+                            <div class="col-lg-7">
+                                @Html.CheckBox("EmailReminder", true)
                                 <div class="gap-top5">@Html.ValidationMessageFor(m => m.EmailReminder)</div>
                             </div>
                         </div>
@@ -188,9 +226,11 @@
             </div>
             <div class="modal-footer ">
                 <button type="submit" class="btn btn-info pull-right gap-right10">
-                    Add</button>
+                    Add
+                </button>
                 <button type="button" data-dismiss="modal" class="btn btn-info pull-right gap-right10">
-                    Close</button>
+                    Close
+                </button>
             </div>
         </div>
     </div>
