--- a/Web/TimeManagement/Views/Master/_PVEditEmployee.cshtml
+++ b/Web/TimeManagement/Views/Master/_PVEditEmployee.cshtml
@@ -5,7 +5,18 @@
     $(document).ready(function () {
 
         $(".datePicker").datepicker();
+        $('#email').change(function () {
+            var val = $('#email').val();
+            var RegEx = /^(([^<>()[\]\\.,;:\s@@"]+(\.[^<>()[\]\\.,;:\s@@"]+)*)|(".+"))@@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
 
+            if (RegEx.test(val) && val.trim("") != '') {
+                $("#error-email").text("");
+                $('#addBtn').attr('disabled', false);
+            } else {
+                $("#error-email").text("Invalid Email.").css({ "color": "red" });
+                $('#addBtn').attr('disabled', true);
+            }
+        });
     });
     function isNumber(evt) {
         evt = (evt) ? evt : window.event;
@@ -14,6 +25,28 @@
             return false;
         }
         return true;
+    }
+    function validateName(textbox, error) {
+        var val = $(textbox).val();
+        var RegEx = /^[a-zA-Z ]+$/i;
+        if (RegEx.test(val) && val.trim() != '') {
+            $(error).text("");
+            $('#addBtn').attr('disabled', false);
+        } else {
+            $(error).text("Invalid name").css({ "color": "red" });
+            $('#addBtn').attr('disabled', true);
+        }
+    }
+    function validateDate(textbox, error) {
+        var val = $(textbox).val();
+        var RegEx = /^((0?[1-9]|1[012])[- /.](0?[1-9]|[12][0-9]|3[01])[- /.](19|20)?[0-9]{2})*$/;
+        if (RegEx.test(val) && val.trim() != '') {
+            $(error).text("");
+            $('#addBtn').attr('disabled', false);
+        } else {
+            $(error).text("Invalid Date! should be in format(mm/dd/yyyy)").css({ "color": "red" });
+            $('#addBtn').attr('disabled', true);
+        }
     }
 </script>
 @using (Html.BeginForm("/EditEmployee", "Master", FormMethod.Post, new { id = "EmployeeEditForm" }))
@@ -43,24 +76,24 @@
                             <div class="col-lg-4 gap-top5 text-right">
                                 <b>First Name</b></div>
                             <div class="col-lg-7">
-                                @Html.TextBoxFor(m => m.FirstName, new { @class = "required  form-control", maxlength = "50" })
-                                <div class="gap-top5">@Html.ValidationMessageFor(m => m.FirstName)</div>
+                                @Html.TextBoxFor(m => m.FirstName, new { @class = "required  form-control", maxlength = "50", id = "first", @onchange = "validateName('#first','#first-error')" })
+                                <div class="gap-top5" id="first-error">@Html.ValidationMessageFor(m => m.FirstName)</div>
                             </div>
                         </div>
                         <div class="col-lg-12 gap-bottom5">
                             <div class="col-lg-4 gap-top5 text-right">
                                 <b>Middle Name</b></div>
                             <div class="col-lg-7">
-                                @Html.TextBoxFor(m => m.MiddleName, new { @class = "form-control", maxlength = "50" })
-                                <div class="gap-top5">@Html.ValidationMessageFor(m => m.MiddleName)</div>
+                                @Html.TextBoxFor(m => m.MiddleName, new { @class = "form-control", maxlength = "50", id = "middle", @onchange = "validateName('#middle','#middle-error')" })
+                                <div class="gap-top5" id="middle-error">@Html.ValidationMessageFor(m => m.MiddleName)</div>
                             </div>
                         </div>
                         <div class="col-lg-12 gap-bottom5">
                             <div class="col-lg-4 gap-top5 text-right">
                                 <b>Last Name</b></div>
                             <div class="col-lg-7">
-                                @Html.TextBoxFor(m => m.LastName, new { @class = "required  form-control", maxlength = "50" })
-                                <div class="gap-top5">@Html.ValidationMessageFor(m => m.LastName)</div>
+                                @Html.TextBoxFor(m => m.LastName, new { @class = "required  form-control", maxlength = "50", id = "last", @onchange = "validateName('#last','#last-error')" })
+                                <div class="gap-top5" id="last-error">@Html.ValidationMessageFor(m => m.LastName)</div>
                             </div>
                         </div>
                         <div class="col-lg-12 gap-bottom5">
@@ -110,24 +143,24 @@
                             <div class="col-lg-4 gap-top5 text-right">
                                 <b>Date Of Birth</b></div>
                             <div class="col-lg-7">
-                                @Html.TextBoxFor(m => m.DOB, new { @class = "required  form-control datePicker" })
-                                <div class="gap-top5">@Html.ValidationMessageFor(m => m.DOB)</div>
+                                @Html.TextBoxFor(m => m.DOB, new { @class = "required  form-control datePicker" ,id = "dob", @onchange = "validateDate('#dob','#dob-error')" })
+                                <div class="gap-top5" id="dob-error">@Html.ValidationMessageFor(m => m.DOB)</div>
                             </div>
                         </div>
                         <div class="col-lg-12 gap-bottom5">
                             <div class="col-lg-4 gap-top5 text-right">
                                 <b>Date Of Joining</b></div>
                             <div class="col-lg-7">
-                                @Html.TextBoxFor(m => m.DOJ, new { @class = "required  form-control datePicker" })
-                                <div class="gap-top5">@Html.ValidationMessageFor(m => m.DOJ)</div>
+                                @Html.TextBoxFor(m => m.DOJ, new { @class = "required  form-control datePicker", id = "doj", @onchange = "validateDate('#doj','#doj-error')" })
+                                <div class="gap-top5" id="doj-error">@Html.ValidationMessageFor(m => m.DOJ)</div>
                             </div>
                         </div>
                         <div class="col-lg-12 gap-bottom5">
                             <div class="col-lg-4 gap-top5 text-right">
                                 <b>Email</b></div>
                             <div class="col-lg-7">
-                                @Html.TextBoxFor(m => m.Email, new { @class = "required  form-control" })
-                                <div class="gap-top5">@Html.ValidationMessageFor(m => m.Email)</div>
+                                @Html.TextBoxFor(m => m.Email, new { @class = "required  form-control",id="email"})
+                                <div class="gap-top5" id="error-email">@Html.ValidationMessageFor(m => m.Email)</div>
                             </div>
                         </div>
                         <div class="col-lg-12 gap-bottom5">
