added validation to not accept special characters

--- a/Web/TimeManagement/Views/Master/_PVAddCustomer.cshtml
+++ b/Web/TimeManagement/Views/Master/_PVAddCustomer.cshtml
@@ -7,6 +7,21 @@
         $(".datePicker").datepicker();
 
     });
+
+</script>
+<script type="text/javascript">
+    $('#name').change(function () {
+        var val = $('#name').val();
+        var RegEx = /^[a-zA-Z0-9 ]+$/i; //accepts alphanumeric with space
+        $('addBtn').attr("disabled", "disabled");
+        if (RegEx.test(val) && val.trim() != '') {
+            $("#name-error").text("");
+            $('#addBtn').attr('disabled', false);
+        } else {
+            $("#name-error").text("Name cannot have numbers, special characters.").css({ "color": "red" });
+            $('#addBtn').attr('disabled', true);
+        }
+    });
 </script>
 @using(Html.BeginForm("/AddCustomer", "Master", FormMethod.Post, new { id = "CustomerAddForm" }))
 {    
@@ -28,11 +43,12 @@
                             <b>Customer Name</b>
                         </div>
                         <div class="col-lg-7">
-                            @Html.TextBoxFor(m => m.CustomerName, new { @class = "required form-control", maxlength = "50" })
+                            @Html.TextBoxFor(m => m.CustomerName, new { @class = "required form-control", maxlength = "50", id = "name" })
                             <div>
                                 &nbsp
                             </div>
-                            <div>@Html.ValidationMessageFor(m => m.CustomerName)</div>
+                            
+                            <div id="name-error" class="error">@Html.ValidationMessageFor(m => m.CustomerName)</div>
                         </div>
                     </div>
                     <div class="col-lg-12 gap-bottom5">
@@ -112,7 +128,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="submit" class="btn btn-info pull-right gap-right10">
+                <button type="submit" id="addBtn" class="btn btn-info pull-right gap-right10">
                     Add
                 </button>
                 <button type="button" data-dismiss="modal" class="btn btn-info pull-right gap-right10">
