--- a/Web/TimeManagement/Views/Master/_PVEditCustomer.cshtml
+++ b/Web/TimeManagement/Views/Master/_PVEditCustomer.cshtml
@@ -7,6 +7,17 @@
         $(".datePicker").datepicker();
 
     });
+    $('#name').change(function () {
+        var val = $('#name').val();
+        var RegEx = /^[a-zA-Z0-9 ]+$/i; //accepts alphanumeric with space
+        if (RegEx.test(val) && val.trim() != '') {
+            $("#name-error").text("");
+            $('#editBtn').attr('disabled', false);
+        } else {
+            $("#name-error").text("Name cannot have numbers, special characters.").css({ "color": "red" });
+            $('#editBtn').attr('disabled', true);
+        }
+    });
 </script>
 @using (Html.BeginForm("/EditCustomer", "Master", FormMethod.Post, new { id = "CustomerUpdateForm" }))
 {    
@@ -25,8 +36,8 @@
                         <div class="col-lg-4 gap-top5 text-right">
                             <b>Customer Name</b></div>
                         <div class="col-lg-7">
-                            @Html.TextBoxFor(m => m.CustomerName, new { @class = "required form-control", maxlength = "50" })
-                            <div>@Html.ValidationMessageFor(m => m.CustomerName)</div>
+                            @Html.TextBoxFor(m => m.CustomerName, new { @class = "required form-control", maxlength = "50" , id = "name"})
+                            <div id="name-error">@Html.ValidationMessageFor(m => m.CustomerName)</div>
                         </div>
                     </div>
                     <div class="col-lg-12 gap-bottom5">
@@ -91,7 +102,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="submit" class="btn btn-info pull-right gap-right10">
+                <button type="submit" id="editBtn" class="btn btn-info pull-right gap-right10">
                     Update</button>
                 <button type="button" data-dismiss="modal" class="btn btn-info pull-right gap-right10">
                     Close</button>
