--- a/Web/TimeManagement/Views/Report/MTSInternalbilling.cshtml
+++ b/Web/TimeManagement/Views/Report/MTSInternalbilling.cshtml
@@ -63,7 +63,7 @@
             return false;
         } else if ((fromdate == "") && (todate != "")) {
             $('#fdate').removeClass('hidden');
-            $('#tdate').addclass('hidden');
+            $('#tdate').addClass('hidden');
             return false;
         }
         if (datevalidate() == false) {
