--- a/Web/TimeManagement/Views/Report/ProjectWise.cshtml
+++ b/Web/TimeManagement/Views/Report/ProjectWise.cshtml
@@ -85,7 +85,7 @@
             return false;
         } else if ((fromdate == "") && (todate != "")) {
             $('#fdate').removeClass('hidden');
-            $('#tdate').addclass('hidden');
+            $('#tdate').addClass('hidden');
             $("#tablediv").html(' ');
             $("#exporttoCSV").hide();
             return false;
